--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "devDependencies": {
+    "@resvg/resvg-js": "^2.6.2",
+    "prettier": "^3.8.1",
     "vite": "^7.3.1"
   },
   "dependencies": {
